--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "firebase": "^10.12.2",
+    "jsonwebtoken": "^9.0.2",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
