--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.21",
     "@mui/material": "^5.15.21",
+    "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.2",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
@@ -21,7 +22,8 @@
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
-    "react-dropzone": "^14.2.3"
+    "react-dropzone": "^14.2.3",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "eslint": "^8",
