--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase": "^10.12.2",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.4",
+    "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
